# synth

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: analyzer.rs  anti_evasion.rs  chat.rs  cli.rs  cloud.rs  errors.rs  exporter.rs  lib.rs  linux_forensics.rs  main.rs  mobile.rs  models.rs  reporter.rs  scanner.rs  ui.rs  utils.rs  watcher.rs  windows_forensics.rs
src/analyzer/: mod.rs
src/binary/: elf.rs  mod.rs  pe.rs  strings.rs
src/forensics/: mod.rs
src/metadata/: mod.rs
src/models/: mod.rs
src/network/: mod.rs
src/reporter/: mod.rs
src/scanner/: analysis.rs  entry.rs  mod.rs  risk.rs
src/secrets/: detection.rs  mod.rs  patterns.rs
src/stego/: mod.rs
src/threat_intel/: ioc.rs  mitre.rs  mod.rs  risk.rs
src/yara/: mod.rs
tests/cloud_repro/: docker.tar  insecure.tf  pod.yaml
tests/cloud_repro/docker_content/: manifest.json
tests/linux_repro/: .bash_history
tests/linux_repro/.ssh/: authorized_keys
tests/linux_repro/cron.d/: malicious
