[package]
name = "synth"
version = "0.2.0"
edition = "2021"

[dependencies]
# CLI and argument parsing
clap        = { version = "4.5", features = ["derive"] }

# Async runtime and concurrency
tokio       = { version = "1.40", features = ["full"] }
rayon       = "1.10"

# Serialization / Deserialization
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
# serde_yaml = "0.9"  # uncomment if you need YAML support

# File system and I/O
walkdir     = "2.5"
memmap2     = "0.9"
bytes       = "1.7"

# Progress bars and terminal UI
indicatif   = "0.17"
console     = "0.15"

# Logging
log         = "0.4"
env_logger  = "0.11"

# Hashing and cryptography
sha2        = "0.10"
sha3        = "0.10"
blake3      = "1.5"
md-5 = "0.10"

# Text processing and regex
regex       = "1.10"
mime_guess  = "2.0"

# Time handling
chrono      = { version = "0.4", features = ["serde"] }

# System information
whoami      = "1.5"
num_cpus    = "1.16"

# Data structures / helpers
hex         = "0.4"

[dev-dependencies]
tempfile    = "3.12"
criterion   = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto             = true
codegen-units   = 1
panic           = "abort"
strip           = true

[profile.dev]
debug = 2
